-------------------------------------------------------------------------------
57 :
	ADDED: 9:SHUTDOWN will cause armaserver to shutdown nicely. Only works before you lock extension i.e 9:LOCK
	FIXED: RCon won't keep trying to reconnect if Battleye doesn't respond i.e is turned off.

	IMPROVED: MISC getRandomString, will always return correct number of strings. Length of string might be larger than requested.

	MINOR: Changed Logging to simpler method, no rotating logfiles based on size. There is no need for it
	

-------------------------------------------------------------------------------
57 :
	IMPROVED: SQL_CUSTOM Return Last ID Option will no longer return -1 and should perf better
	
	FIXED: Player Whitelisting was counting non-whitelisted players instead of total players

	FIXED: SQL_CUSTOM / SQL_CUSTOM_V2 issue 
			Where non-cached prepared statements that constain multiple sql prepared statements.
			It would continue to run next statement if it encountered an error,
			instead of reporting error + stop running the next statements in the callname.


-------------------------------------------------------------------------------
56 :
	ADDED: Rcon Whitelisting / Reserve Slots

	FIXED: Multiple fixes for Rcon Player kicks

	MINOR: Code Improvement to 2: + 1: Calls

-------------------------------------------------------------------------------
55 :
	ADDED: Rcon Player kicks for bad characters/strings (regex rules)

	ADDED: SQL_CUSTOM + SQL_CUSTOM_V2 New String + Sanitize Options
	FIXED: Multiple Fixes for SQL_CUSTOM + SQL_CUSTOM_V2, including Steam Checks

	REMOVED: SQL_CUSTOM Options Vac_BeGUID

	CHANGED: 9:VAR Option now always returns value as a string

	IMPORTANT: Removed Redis Support

-------------------------------------------------------------------------------
54 :
	FIXED: SQL_CUSTOM + SQL_CUSTOM Required Version Checks
	FIXED: SQL_CUSTOM + SQL_CUSTOM_V2 Handling of Null Values in Database
