@@ -21,8 +21,6 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 #include <string>
 
 #include <boost/crc.hpp>
-#include <boost/random/random_device.hpp>
-#include <boost/random/uniform_int_distribution.hpp>
 
 #include <Poco/MD4Engine.h>
 #include <Poco/MD5Engine.h>
@@ -46,11 +44,6 @@ class MISC: public AbstractProtocol
 	    boost::crc_32_type crc32;
 		std::mutex mutex_crc32;
 
-		std::string random_chars;
-		boost::random::random_device random_chars_rng;
-		std::mutex mutex_RandomString;
-		std::vector < std::string > uniqueRandomVarNames;
-
 		void getDateTime(std::string &result);
 		void getDateTime(int hours, std::string &result);
 
@@ -59,5 +52,5 @@ class MISC: public AbstractProtocol
 		void getMD5(std::string &input_str, std::string &result);
 		void getBEGUID(std::string &input_str, std::string &result);
 
-		void getRandomString(std::string &input_str, bool uniqueString, std::string &result);
+		void getRandomString(std::string &input_str, std::string &result);
 };
